--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "expo-router": "~6.0.8",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "firebase": "^12.3.0",
+    "firebase": "^12.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
-    "react-native": "0.81.4",
+    "react-native": "^0.81.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
