--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~54.0.10",
     "expo-build-properties": "^1.0.9",
     "expo-constants": "~18.0.9",
+    "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
     "expo-secure-store": "~15.0.7",
